--- a/render.yaml
+++ b/render.yaml
@@ -1,33 +1,56 @@
+services:
+  - type: web
+    name: myapp-web
+    env: ruby
+    plan: free
+    buildCommand: ./bin/render-build.sh
+    startCommand: REDIS_URL="redis://${REDIS_HOST}" bundle exec puma -C config/puma.rb
+    domains:
+      - yourdomain.com # Substitua pelo seu nome de domínio
+    envVars:
+      - key: DATABASE_URL
+        fromDatabase:
+          name: myapp-db
+          property: connectionString
+      - key: REDIS_HOST
+        fromService:
+          name: myapp-redis
+          type: pserv
+          property: hostport
+      - key: RAILS_MASTER_KEY
+        sync: false
+
+  - type: worker
+    name: myapp-sidekiq
+    env: ruby
+    plan: starter
+    buildCommand: bundle install
+    startCommand: REDIS_URL="redis://${REDIS_HOST}" bundle exec sidekiq -e production
+    envVars:
+      - key: DATABASE_URL
+        fromDatabase:
+          name: myapp-db
+          property: connectionString
+      - key: REDIS_HOST
+        fromService:
+          name: myapp-redis
+          type: pserv
+          property: hostport
+      - key: RAILS_MASTER_KEY
+        sync: false
+
 databases:
   - name: portifolio
     databaseName: portifolio
     user: palermoc
     plan: free
 
-services:
-  - type: web
-    name: portifolio
-    runtime: ruby
-    plan: free
-    buildCommand: "./bin/render-build.sh"
-    # preDeployCommand: "bundle exec rails db:migrate" # preDeployCommand only available on paid instance types
-    startCommand: "bundle exec rails server"
-    envVars:
-      - key: DATABASE_URL
-        fromDatabase:
-          name: portifolio
-          property: connectionString
-      - key: RAILS_MASTER_KEY
-        sync: false
-workers:
-  - name: my-worker
-    type: worker
-    repo: https://github.com/your-org/your-repo
-    branch: main
-    env: ruby
-    plan: starter
-    buildCommand: "bundle install"
-    startCommand: REDIS_URL="redis://${REDIS_HOST}" bundle exec sidekiq -e production
-    env:
-      RAILS_ENV: production
-    plan: starter
+pservices:
+  - name: myapp-redis
+    env: docker
+    repo: https://github.com/render-examples/redis.git
+    numInstances: 1
+    disk:
+      name: myapp-redis-data
+      mountPath: /var/lib/redis
+      sizeGB: 1
