--- a/render.yaml
+++ b/render.yaml
@@ -45,8 +45,8 @@ databases:
     user: palermoc
     plan: free
 
-pservices:
-  - name: myapp-redis
+ - type: pserv
+    name: myapp-redis
     env: docker
     repo: https://github.com/render-examples/redis.git
     numInstances: 1
